--- a/Ch07-Random-Processes/Makefile
+++ b/Ch07-Random-Processes/Makefile
@@ -1,2 +1,5 @@
 enumsaw: enumsaw_args.f
 	gfortran -O0 -g -o enumsaw enumsaw_args.f
+	
+enumsaw_fast: enumsaw_args.f
+	gfortran -O3 -o enumsaw_fast enumsaw_args.f
